♻️  Avoid flicker on hover copiable text

--- a/framework-plugins/lisk-framework-dashboard-plugin/src/ui/components/CopiableText/CopiableText.module.scss
+++ b/framework-plugins/lisk-framework-dashboard-plugin/src/ui/components/CopiableText/CopiableText.module.scss
@@ -4,7 +4,7 @@
 
 .clickableRow {
 	padding: 0.5px;
-	height: auto;
+	max-width: 500px;
 	min-height: 20px;
 }
 
